<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".Register">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_form"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            android:gravity="center"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/enter_email_address"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/enter_phone_number"
            android:gravity="center"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/etPassword_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:gravity="center"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPassword_reg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnRegister_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register" />

        <TextView

            android:id="@+id/got_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_gravity="right"
            android:focusable="true"
            android:text="@string/have_account"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>